@@ -1,3 +1,6 @@
+current version
+  * compute_delay : DOA can be not normalized
+
 version 0.2
   * Covariance matrix (cov_matrix) format is corrected from (fcc) to (ccf).
   * Beamformers codes are refactored into classes that can load background and preload signal.
